--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "final_project",
+  "name": "smart-savings-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "proxy-server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node proxy-server.js"
   },
   "keywords": [],
   "author": "",
